# RustAsyncTelecom

./: .gitignore  Cargo.toml  README.md
App/: .env  Cargo.toml
App/client/: Cargo.toml
App/client/src/: lib.rs  main.rs
App/client/src/fsm/exceptions/: exceptions.rs  initialize_client_exception.rs  mod.rs
App/client/src/fsm/handlers/: handle_add_user_response.rs  handle_delete_user_response.rs  handle_exit.rs  handle_heart_beat_response.rs  handle_system_time_response.rs  handle_user_info_response.rs
App/client/src/fsm/machines/: client.rs
App/client/src/fsm/states/: initialize_client.rs  mod.rs  sender.rs  state.rs
App/client/src/msg_builder/: build_delete_user_req.rs  build_heartbeat_req_message.rs  build_system_time_req.rs  build_user_info_req.rs  generate_messages_add_user_req.rs  generate_messages_user_info_req.rs  mod.rs
App/client/src/serializers/: mod.rs
App/lib/envelope_macro/: Cargo.toml
App/lib/envelope_macro/src/: lib.rs
App/lib/logger/: Cargo.toml
App/lib/logger/benches/: logger_benchmark.rs
App/lib/logger/src/: lib.rs
App/lib/redis_manager/: Cargo.toml
App/lib/redis_manager/src/: redis_manager.rs
App/scripts/: run_clients.sh
App/server/: Cargo.toml
App/server/src/: lib.rs  main.rs  server.rs
App/server/src/builder/: build_add_user_response.rs  build_delete_user_response.rs  build_heartbeat_response.rs  build_system_time_response.rs  build_user_info_response.rs
App/server/src/fsm/machines/: sender.rs  server.rs
App/server/src/fsm/states/: state_add_user_req.rs  state_delete_user_req.rs  state_heartbeat_req.rs  state_system_time_req.rs  state_user_info_req.rs
App/server/src/serializers/: mod.rs
GeneralApp/: .env  .gitignore  Cargo.toml  config.toml
GeneralApp/backup/: client.rs  server.rs
GeneralApp/client/: Cargo.toml
GeneralApp/client/src/: client.rs  lib.rs  main.rs
GeneralApp/client/src/fsm/: mod.rs
GeneralApp/client/src/fsm/exceptions/: add_user_resp_exception.rs  delete_user_response_exception.rs  exceptions.rs  heart_beat_exception.rs  mod.rs  system_time_response_exception.rs  user_info_response_exception.rs
GeneralApp/client/src/fsm/handlers/: handle_add_user_response.rs  handle_delete_user_response.rs  handle_exit.rs  handle_foo_response.rs  handle_heart_beat_response.rs  handle_system_time_response.rs  handle_user_info_response.rs  mod.rs
GeneralApp/client/src/fsm/machines/: client.rs  mod.rs
GeneralApp/client/src/fsm/states/: initialize_client.rs  mod.rs  receive_response.rs  send_delete_user_request.rs  send_foo_req.rs  send_heartbeat_request.rs  send_message.rs  send_system_time_req.rs  send_user_info_req.rs  sender.rs  sending_add_user_req.rs  state.rs
GeneralApp/client/src/msg_builder/: build_delete_user_req.rs  build_foo_req.rs  build_heartbeat_req_message.rs  build_message_add_user_req.rs  build_system_time_req.rs  build_user_info_req.rs  mod.rs
GeneralApp/client/src/serializers/: mod.rs
GeneralApp/idl/: communication.proto  company.proto
GeneralApp/lib/logger/: Cargo.toml
GeneralApp/lib/redis_manager/: Cargo.toml
GeneralApp/server/: Cargo.toml
GeneralApp/server/src/: lib.rs  main.rs  server.rs
GeneralApp/server/src/builder/: build_add_user_response.rs  build_delete_user_response.rs  build_foo_response.rs  build_heartbeat_response.rs  build_system_time_response.rs  build_user_info_response.rs  mod.rs
GeneralApp/server/src/fsm/: mod.rs
GeneralApp/server/src/fsm/machines/: mod.rs  sender.rs  server.rs
GeneralApp/server/src/fsm/states/: mod.rs  state_delete_user_req.rs  state_system_time_req.rs  state_user_info_req.rs
GeneralApp/server/src/serializers/: mod.rs
asyncZmqExample/client/: Cargo.toml
asyncZmqExample/client/src/: main.rs
asyncZmqExample/server/src/: main.rs
benchmark Rust/: .gitignore  Cargo.toml
benchmark Rust/client/: Cargo.toml
benchmark Rust/client/src/: main.rs  message_builders.rs
benchmark Rust/idl/: ap.proto
benchmark Rust/service/: Cargo.toml
benchmark Rust/service/src/: main.rs  service.rs
client/: Cargo.toml
client/src/: main.rs
client/src/fsm/exceptions/: mod.rs
client/src/fsm/handlers/: handle_add_user_response.rs  handle_delete_user_response.rs  handle_heart_beat_response.rs  handle_system_time_response.rs  handle_user_info_response.rs
client/src/fsm/machines/: client.rs
client/src/fsm/states/: sender.rs
client/src/msg_builder/: build_delete_user_req.rs  build_heartbeat_req_message.rs  generate_messages_add_user_req.rs  mod.rs
lib/logger/benches/: logger_benchmark.rs
lib/redis_manager/src/: redis_manager.rs
lib/zmq_handler_macro/: Cargo.toml
lib/zmq_handler_macro/src/: lib.rs
lib/zmq_sender/: Cargo.toml
lib/zmq_sender/src/: lib.rs
protoExample/: .gitignore
protoExample/idl/: company.proto
protoExample/myApp/src/: main.rs
protoTmp/: Cargo.toml
protoTmp/myApp/: Cargo.toml
server/: Cargo.toml
server/src/: server.rs
zmqExample/: Cargo.toml
zmqExample/client/: Cargo.toml
zmqTest/server/: Cargo.toml
(+17 files in other folders)
