[workspace]
members = [
    "client",
    "generated",
    "lib/envelope_macro",
    "lib/logger",
    "lib/redis_manager",
    "lib/zmq_handler_macro",
    "server",
]
resolver = "2"

[workspace.lints.clippy]
enum_glob_use = "deny"
missing_panics_doc = "deny"
unused_imports = "deny"
pedantic = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
anyhow = "1.0.79"
async_zmq = "0.4.0"
chrono = "0.4.34"
criterion = "0.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
envelope_macro = { path = "lib/envelope_macro" }
generated = { path = "generated" }
logger = { path = "lib/logger" }
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
rand = "0.8"
redis = "0.24.0"
redis_manager = { path = "lib/redis_manager" }
simplelog = { version = "0.12.1", features = ["termcolor"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
zmq_handler_macro = { path = "lib/zmq_handler_macro" }
