[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async_zmq = { workspace = true }
dotenv_codegen = { workspace = true }
envelope_macro = { workspace = true }
generated = { workspace = true }
logger = { workspace = true }
protobuf = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zmq_handler_macro = { workspace = true }
zmq_sender = { workspace = true }

[lints]
workspace = true
