[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async_zmq = { workspace = true }
dotenv_codegen = { workspace = true }
generated = { workspace = true }
log = { workspace = true }
protobuf = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
