[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zmq = "0.4.0"
tokio = { version = "1", features = ["full"] }
protobuf = "3.2.0"
rand = "0.8"
generated = { path = "../generated" }
anyhow = "1.0.79"
lazy_static = "1.4"
config = "0.13.4"
