[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv_codegen = { workspace = true }
log = "0.4.20"
simplelog = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "logger_benchmark"
harness = false